--- a/css/styles.css
+++ b/css/styles.css
@@ -127,17 +127,29 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: 100px;
+	padding: 10px;
   background-color: #3397db;
   align-items: center;
 }
 .filter-options h2 {
+	padding: 10px;
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
+	text-align: center;
 }
+
+.select-form-field {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+ 	justify-content: center
+
+}
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
@@ -171,13 +183,19 @@ nav h1 a {
   width: 270px;
 }
 #restaurants-list .restaurant-img {
-  background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
   min-height: 248px;
   min-width: 100%;
 }
+
+.restaurant-img {
+	padding-top: 10px;
+	width: 100%;
+	height: auto;
+}
+
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial, sans-serif;
@@ -296,4 +314,10 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+@media only screen and (max-width: 460px) {
+	.filter-options {
+		height: 150px;
+	}
 }
