--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,6 @@ canvas,
 details,
 figcaption,
 figure,
-footer,
 header,
 hgroup,
 menu,
@@ -68,6 +67,7 @@ section {
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+	width: 100%;
 }
 /* ====================== Navigation ====================== */
 nav {
@@ -147,7 +147,6 @@ nav h1 a {
 	flex-wrap: wrap;
 	align-items: center;
  	justify-content: center
-
 }
 
 .filter-options select {
@@ -181,7 +180,7 @@ nav h1 a {
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
+  text-align: center;
   width: 270px;
 }
 #restaurants-list .restaurant-img {
@@ -197,6 +196,16 @@ nav h1 a {
 	min-width: 100%;
 	height: auto;
 }
+
+.detailed-restaurant-img {
+	width: 80%;
+	text-align: center;
+	margin: 0 auto;
+
+
+}
+
+
 
 #restaurants-list li h1 {
   color: #f18200;
@@ -260,9 +269,7 @@ nav h1 a {
   text-transform: uppercase;
   line-height: 1.1;
 }
-#restaurant-img {
-  width: 90%;
-}
+
 #restaurant-address {
   font-size: 12pt;
   margin: 10px 0px;
@@ -285,7 +292,10 @@ nav h1 a {
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
+
 }
+
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
@@ -307,13 +317,14 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 10px 10px;
   position: relative;
   width: 85%;
 }
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
 }
